--- a/UI/Test/NGCTResultPage.xaml
+++ b/UI/Test/NGCTResultPage.xaml
@@ -44,7 +44,7 @@
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
+				<TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
 
