--- a/UI/Test/TestCancelledResultPage.xaml
+++ b/UI/Test/TestCancelledResultPage.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl
+﻿<Test:ResultControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
     x:Class="YellowstonePathology.UI.Test.TestCancelledResultPage"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -42,8 +43,8 @@
                 
                 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Navigation</TextBlock>
-                
-                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
+
+                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
@@ -52,23 +53,19 @@
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize Results</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
+                <TextBlock Name="TextBlockClose" Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkCloseWindow_Click">Close</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkUnacceptResults_Click">
-						<TextBlock Text="Unaccept Results" />
-					</Hyperlink>
-				</TextBlock>
-                
-                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkUnfinalResults_Click">
-						<TextBlock Text="Unfinalize Results" />
-					</Hyperlink>
+                    <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-			</Grid>
+                <TextBlock Name="TextBlockUnfinalResults"  Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
+                </TextBlock>
+
+            </Grid>
             
             <Grid Grid.Column="1" Margin="10">
                 <Grid.ColumnDefinitions>
@@ -136,6 +133,6 @@
         </Grid>
 
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="HyperLinkCloseWindow_Click">Close</Button>
+		<Button Name="ButtonClose" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="HyperLinkCloseWindow_Click">Close</Button>
 	</Grid>
-</UserControl>
+</Test:ResultControl>
