--- a/UI/Test/IHCQCResultPage.xaml
+++ b/UI/Test/IHCQCResultPage.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl
+﻿<Test:ResultControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
     x:Class="YellowstonePathology.UI.Test.IHCQCResultPage"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -55,7 +56,7 @@
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize</Hyperlink>
 				</TextBlock>
 
@@ -130,6 +131,6 @@
 		</Grid>
 		
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next</Button>
+		<Button Name="ButtonNext" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next</Button>
 	</Grid>
-</UserControl>
+</Test:ResultControl>
