--- a/UI/Test/LynchSyndromeEvaluationResultPage.xaml
+++ b/UI/Test/LynchSyndromeEvaluationResultPage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Test.LynchSyndromeEvaluationResultPage"
+﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.LynchSyndromeEvaluationResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition></ColumnDefinition>
@@ -67,7 +68,7 @@
                     <Hyperlink Click="HyperLinkAcceptResults_Click" FontSize="14">Accept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click" FontSize="14">Show Document</Hyperlink>
 				</TextBlock>
 
@@ -79,7 +80,7 @@
                     <Hyperlink Click="HyperLinkUnacceptResults_Click" FontSize="14">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">                    
 				<Hyperlink Click="HyperLinkUnfinalResults_Click" FontSize="14">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
@@ -246,8 +247,8 @@
 		</Grid>
 
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
-		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
+        <Button Name="ButtonBack" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
+		<Button Name="ButtonNext" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
 
 	</Grid>
-</UserControl>
+</Test:ResultControl>
