--- a/UI/EmbeddingDialog.xaml
+++ b/UI/EmbeddingDialog.xaml
@@ -5,18 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI"
         mc:Ignorable="d"
-        Title="Embedding Dialog" Height="600" Width="800" WindowStyle="ToolWindow">
+        Title="Embedding Dialog" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid>
+                
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-            <TextBox Name="TextBoxDate" Margin="2" Width="80" Text="{Binding Path=WorkDate, Converter={StaticResource ShortDateConverter}}" />
+            <TextBox Name="TextBoxDate" Margin="2" Width="120" Text="{Binding Path=WorkDate, Converter={StaticResource ShortDateConverter}}" />
 
             <Button Click="ButtonAccessionOrderBack_Click" Width="30">
                 <StackPanel Orientation="Horizontal">
@@ -30,7 +33,11 @@
                 </StackPanel>
             </Button>
         </StackPanel>
-        
+
+        <ComboBox Grid.Column="1" Grid.Row="0" Name="ComboBoxProcessorRuns" ItemsSource="{Binding Path=ProcessorRunCollection}" DisplayMemberPath="Name" Margin="2,2,2,2"
+                  Width="200" HorizontalAlignment="Right">
+        </ComboBox>
+
         <ListView Name="ListViewAliquotOrders" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=AliquotOrderCollection}">
             <ListView.View>
                 <GridView>
@@ -40,6 +47,30 @@
                     <GridViewColumn Header="By" Width="100" DisplayMemberBinding="{Binding Path=GrossVerifiedBy}" />
                     <GridViewColumn Header="Embedded" Width="130" DisplayMemberBinding="{Binding Path=EmbeddingVerifiedDate}" />
                     <GridViewColumn Header="By" Width="100" DisplayMemberBinding="{Binding Path=EmbeddingVerifiedBy}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <ListView Name="ListViewSpecimenOrders" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderCollection}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Master Accession" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
+                    <GridViewColumn Header="Description" Width="250" DisplayMemberBinding="{Binding Path=Description}" />
+                    <GridViewColumn Header="Processor" Width="200" DisplayMemberBinding="{Binding Path=ProcessorRun}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+        
+        <ListView Name="ListViewHoldList" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderHoldCollection}">
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Tag="{Binding}" Header="Remove Hold" Click="ContextMenuRemoveHold_Click"></MenuItem>
+                </ContextMenu>
+            </ListView.ContextMenu>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Master Accession" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
+                    <GridViewColumn Header="Description" Width="500" DisplayMemberBinding="{Binding Path=Description}" />
                 </GridView>
             </ListView.View>
         </ListView>
