--- a/YellowstonePathology/UI/AppMessaging/LockRequestReceivedPage.xaml
+++ b/YellowstonePathology/UI/AppMessaging/LockRequestReceivedPage.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Path=MessageBody.Message}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,2,2,2"></TextBlock>
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Path=Message.Message}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2,2,2,2"></TextBlock>
         <Button Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonRespondTakeIt_Click" Margin="2,2,2,2">Go ahead and take it</Button>
         <Button Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonRespondHoldYourHorses_Click" Margin="2,2,2,2">Hold your horses</Button>
         <Button Grid.Column="0" Grid.Row="3"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="ButtonClose_Click" Margin="2,2,2,2">Close</Button>
