--- a/YellowstonePathology/UI/Test/FGFR1ResultPage.xaml
+++ b/YellowstonePathology/UI/Test/FGFR1ResultPage.xaml
@@ -1,11 +1,10 @@
-﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.RUNX1RUNX1T1AML1ETOTranslocationResultPage"
+﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.FGFR1ResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:YellowstonePathology.UI.Test"
              xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -59,7 +58,7 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
-				</TextBlock>
+                </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
