--- a/YellowstonePathology/UI/AmendmentV2.xaml
+++ b/YellowstonePathology/UI/AmendmentV2.xaml
@@ -5,7 +5,7 @@
     >
     <Grid Margin="5,5,5,5" KeyUp="GridAmendment_KeyUp">
       <Grid.Resources>
-        <ResourceDictionary Source="\Styles.xaml"/>
+        <ResourceDictionary Source="\UI\Styles.xaml"/>
       </Grid.Resources>
       <Grid.ColumnDefinitions>
         <ColumnDefinition></ColumnDefinition>
