--- a/YellowstonePathology/UI/Scanning/ScanProcessingWorkspace.xaml
+++ b/YellowstonePathology/UI/Scanning/ScanProcessingWorkspace.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<UserControl.Resources>
-		<ResourceDictionary Source="\Styles.xaml"/>
+		<ResourceDictionary Source="\UI\Styles.xaml"/>
 	</UserControl.Resources>
 	<Grid>
 		<Grid.ColumnDefinitions>
