--- a/YellowstonePathology/UI/SearchWorkspace.xaml
+++ b/YellowstonePathology/UI/SearchWorkspace.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:localUI="clr-namespace:YellowstonePathology.UI">
 	<UserControl.Resources>
-		<ResourceDictionary Source="/Styles.xaml"/>
+		<ResourceDictionary Source="/UI/Styles.xaml"/>
 	</UserControl.Resources>
     <Grid>
 			<Grid.ColumnDefinitions>
@@ -76,7 +76,7 @@
         <TabItem Name="TabItemPatientHistory" Header="History">
           <Grid>            
             <Grid.Resources>
-              <ResourceDictionary Source="\Styles.xaml"/>
+              <ResourceDictionary Source="\UI\Styles.xaml"/>
             </Grid.Resources>
             <Grid.ColumnDefinitions>
               <ColumnDefinition></ColumnDefinition>
