--- a/YellowstonePathology/UI/Billing/BillingPage.xaml
+++ b/YellowstonePathology/UI/Billing/BillingPage.xaml
@@ -217,6 +217,7 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Bottom">
                 <Button Width="100" Height="40" Margin="2,2,2,2" Click="ButtonPatientDetails_Click">PatientDetails ...</Button>
+                <Button Width="100" Height="40" Margin="2,2,2,2" Click="ButtonSendFT1_Click">SVH Financial</Button>
 				<Button Width="100" Height="40" Margin="2,2,2,2" Click="ButtonCPTCodes_Click">CPT Codes</Button>
 				<Button Width="100" Height="40" Margin="2,2,2,2" Click="ButtonICDCodes_Click">ICD Codes</Button>
                 <Button Width="100" Height="40" Margin="2,2,2,2" Click="ButtonUnset_Click">Unset</Button>
